--- a/src/lambda-functions/lambda-functions.yaml
+++ b/src/lambda-functions/lambda-functions.yaml
@@ -31,7 +31,7 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: !Ref StageName
-      Name: !Sub "${StageName}-${AppName}-patient-api"
+      Name: !Sub "${StageName}-${AppName}-api"
       Auth:
         DefaultAuthorizer: MyCognitoAuthorizer
         Authorizers:
@@ -52,7 +52,7 @@ Resources:
         Username: !Ref Username
         Password: !Ref Password
         PyMySQLLayerArn: !Ref PyMySQLLayerArn
-        MyApi: !Ref MyApi
+        MyApi: !GetAtt MyApi.RootResourceId
 
   MedicalProcedureGroupFunctionsStack:
     Type: AWS::CloudFormation::Stack
@@ -68,21 +68,4 @@ Resources:
         Username: !Ref Username
         Password: !Ref Password
         PyMySQLLayerArn: !Ref PyMySQLLayerArn
-        MyApi: !Ref MyApi
-
-  # StaffFunctions:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     TemplateURL: ./lambda-functions/staff/staff.yaml
-  #     Parameters:
-  #       Server: !Ref Server
-  #       Database: !Ref Database
-  #       Username: !Ref Username
-  #       Password: !Ref Password
-# Outputs:
-#   PatientFunctionOutputs:
-#     Description: "Outputs from the PatientFunctions stack"
-#     Value:
-#       Fn::GetAtt:
-#         - PatientFunctions
-#         - Outputs
+        MyApi: !GetAtt MyApi.RootResourceId
