--- a/src/lambda-functions/patient/patient.yaml
+++ b/src/lambda-functions/patient/patient.yaml
@@ -20,10 +20,19 @@ Parameters:
   PyMySQLLayerArn:
     Description: ARN of the Lambda layer to associate with our function
     Type: String
-  MyApi:
-    Type: String
 
 Resources:
+  MyApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: !Ref StageName
+      Name: !Sub "${StageName}-${AppName}-api"
+      Auth:
+        DefaultAuthorizer: MyCognitoAuthorizer
+        Authorizers:
+          MyCognitoAuthorizer:
+            UserPoolArn: !Ref UserPoolArn
+
   GetAPatientFunction:
     Type: AWS::Serverless::Function
     Properties:
