--- a/src/lambda-functions/patient/patient.yaml
+++ b/src/lambda-functions/patient/patient.yaml
@@ -27,6 +27,10 @@ Resources:
     Properties:
       StageName: !Ref StageName
       Name: !Sub "${StageName}-${AppName}-patient-api"
+      Cors:
+        AllowOrigin: "'*'"
+        AllowMethods: "'GET,POST,PUT,DELETE'"
+        AllowHeaders: "'Authorization,Content-Type'"
       Auth:
         DefaultAuthorizer: MyCognitoAuthorizer
         Authorizers:
