--- a/src/lambda-functions/medical-procedure-group/medical-procedure-group.yaml
+++ b/src/lambda-functions/medical-procedure-group/medical-procedure-group.yaml
@@ -148,3 +148,32 @@ Resources:
               Action:
                 - "rds:*"
               Resource: "*"
+
+  CreateFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: create
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Layers:
+        - !Ref PyMySQLLayerArn
+      Environment:
+        Variables:
+          HOST: !Ref DBHost
+          DATABASE: !Ref Database
+          USERNAME: !Ref Username
+          PASSWORD: !Ref Password
+      Events:
+        CreateActivities:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /medical-procedure-group
+            Method: create
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - "rds:*"
+              Resource: "*"
