--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -87,7 +87,7 @@ Resources:
                     "patient_id": "$field.patient_id.S",
                     "patient_name": "$field.patient_id.S",
                     "reason": "$field.reason.S",
-                    "status": "$field.status.N"
+                    "status_value": "$field.status.N"
                   }
                   #if($foreach.hasNext),#end
                 #end]
@@ -134,7 +134,7 @@ Resources:
                       "type": {"S": "w"},
                       "epoch": {"N": "$input.params('epoch')"}
                   },
-                  "UpdateExpression": "SET produce_id = :produce_id, patient_id = :patient_id, patient_name = :patient_name, reason = :reason, status = :status",
+                  "UpdateExpression": "SET produce_id = :produce_id, patient_id = :patient_id, patient_name = :patient_name, reason = :reason, status_value = :status",
                   "ExpressionAttributeValues": {
                     ":produce_id": {"S": "$input.path('$.produce_id')"},
                     ":patient_id": {"S": "$input.path('$.patient_id')"},
@@ -192,7 +192,7 @@ Resources:
                     "patient_id": {"S": "$input.path('$.patient_id')"},
                     "patient_name": {"S": "$input.path('$.patient_name')"},
                     "reason": {"S": "$input.path('$.reason')"},
-                    "status": {"N": "$input.path('$.status')"}
+                    "status_value": {"N": "$input.path('$.status')"}
                   }
                 }
               - TableName: !Ref TableName
