--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -87,7 +87,7 @@ Resources:
                     "patient_id": "$field.patient_id.S",
                     "patient_name": "$field.patient_id.S",
                     "reason": "$field.reason.S",
-                    "status_value": "$field.status.N"
+                    "status": "$field.status_value.N"
                   }
                   #if($foreach.hasNext),#end
                 #end]
