--- a/src/lambda-functions/medical-procedure/medical-procedure.yaml
+++ b/src/lambda-functions/medical-procedure/medical-procedure.yaml
@@ -53,7 +53,7 @@ Resources:
           Properties:
             RestApiId: !Ref MyApi
             Path: /medical-procedure
-            Method: create
+            Method: post
       Policies:
         - Version: "2012-10-17"
           Statement:
