--- a/src/lambda-functions/medical-procedure-group/medical-procedure-group.yaml
+++ b/src/lambda-functions/medical-procedure-group/medical-procedure-group.yaml
@@ -149,7 +149,7 @@ Resources:
                 - "rds:*"
               Resource: "*"
 
-  CreateFunction:
+  CreateFunctionMethodPost:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: create
