--- a/src/lambda-functions/medical-procedure/medical-procedure.yaml
+++ b/src/lambda-functions/medical-procedure/medical-procedure.yaml
@@ -33,7 +33,7 @@ Resources:
           MyCognitoAuthorizer:
             UserPoolArn: !Ref UserPoolArn
 
-  CreateOneFunction:
+  CreateOneFunctionMethodPost:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: create
